fixed reset button in css pushing the wrapper upward on hover
Issue ye tha ki border element ki total size badha raha tha. border: none se size normal ho gaya, lekin hover par 2px border add hua to button thoda expand ho gaya. Bas border-size ki wajah se layout shift ho raha tha ye fix kar diya

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ body {
     background-color: black;
     font-size: 1rem;
     border-radius: 10px;
-    border: none;
     transition: 0.5s all;
 }
 .reset:hover{
@@ -71,4 +70,5 @@ border: 2px solid red;
         font-size: 12px;
 
     }
+
 }
